--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,16 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'com.faendir.rhino:rhino-android:1.5.2' //this is used to calculate the expression
+    implementation 'com.faendir.rhino:rhino-android:1.5.2'
+    implementation files('libs\\MathParser.org-mXparser.jar')
+    implementation files('libs\\MathParser.org-mXparser.jar')
+    implementation files('libs\\MathParser.org-mXparser.jar')
+    implementation files('libs\\MathParser.org-mXparser.jar')
+    implementation files('libs\\MathParser.org-mXparser.jar')
+    implementation files('libs\\MathParser.org-mXparser.jar')
+    //this is used to calculate the expression
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
 }
